force-app/main/default/objects/Retail_Store_Visit__c/fields/Unclaimed_Order_Returned__c.field-meta.xml
<CustomField>
    <fullName>Unclaimed_Order_Returned__c</fullName>
    <description>Unclaimed special orders returned to Red Wing prior to 30 days deadline</description>
    <inlineHelpText>Unclaimed special orders returned to Red Wing prior to 30 days deadline</inlineHelpText>
    <label>Unclaimed Order Returned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>