force-app/main/default/objects/Retail_Store_Visit__c/fields/Verify_Fitting_Stool_Leads__c.field-meta.xml
<CustomField>
    <fullName>Verify_Fitting_Stool_Leads__c</fullName>
    <description>Fitting stool lead forms are displayed near seating area</description>
    <inlineHelpText>Fitting stool lead forms are displayed near seating area</inlineHelpText>
    <label>Verify Fitting Stool Leads</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>