force-app/main/default/objects/Retail_Store_Visit__c/fields/Visit_Rpt_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Visit_Rpt_Owner_Role__c</fullName>
    <description>Visit Report Owner Role (ROM, ARM, etc) - used in reporting and distribution</description>
    <formula>Owner:User.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Visit Report Owner Role (ROM, ARM, etc) - used in reporting and distribution</inlineHelpText>
    <label>Visit Rpt Owner Role</label>
    <type>Text</type>
</CustomField>