force-app/main/default/objects/Retail_Store_Visit__c/recordTypes/Store_Audit.recordType-meta.xml
<RecordType>
    <fullName>Store_Audit</fullName>
    <active>true</active>
    <description>Store Audit performed less frequently-long form</description>
    <label>Store Audit</label>
</RecordType>