force-app/main/default/objects/Retail_Store_Visit__c/recordTypes/Store_Visit.recordType-meta.xml
<RecordType>
    <fullName>Store_Visit</fullName>
    <active>true</active>
    <description>Store Visit performed regularly-short form</description>
    <label>Store Visit</label>
</RecordType>