force-app/main/default/objects/Retail_Store_Visit__c/listViews/Store_Audit_Reports.listView-meta.xml
<ListView>
    <fullName>Store_Audit_Reports</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Retail_Store_Visit__c.Store_Audit</value>
    </filters>
    <label>Store Audit Reports</label>
</ListView>